test: update test for SignalUtilityService refactor existing test and add new for increasing code coverage